# wizard-esp32

./: Cargo.toml
.cargo/: config.toml
src/: display.rs  main.rs
