[package]
name = "wizard"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32-hal = { version = "0.10.0", features = [ "embassy", "async", "default", "embassy-time-timg0"] }
esp-backtrace     = { version = "0.5.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.4.0", features = ["esp32"] }
static_cell       = "1.0.0"
embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
embassy-time       = { version = "0.1.0", features = ["nightly"] }
anyhow = {version = "1.0.69", default_features = false }
esp-alloc = {version = "0.2.0", features = ["oom-handler"] }
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"







[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3

[profile.dev]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"

[profile.dev.package.xtensa-lx-rt]
opt-level = 'z'
